@@ -22,6 +22,31 @@ define service {
 	contacts	nagiosadmin
 }
 
+define service {
+	host_name	host1
+	service_description	Uses important check command
+	check_command	check_me!with some parameters
+	max_check_attempts	5
+	check_interval	15
+	retry_interval	1
+	check_period	none
+	notification_interval	65
+	notification_period	none
+	contacts	nagiosadmin
+	use	service-distributed
+}
+
+define service {
+	name	service-distributed
+	check_command	!set_to_stale
+	register	0
+}
+
+define command {
+	command_name	set_to_stale
+	command_line	/usr/local/nagios/libexec/set_to_stale
+}
+
 define command {
 	command_name	check_me
 	command_line	/usr/local/nagios/libexec/check_me
