@@ -21,6 +21,11 @@ define command {
 	command_line	/usr/local/nagios/notifications/notify-none
 	}
 
+define command {
+	command_name	set_to_stale
+	command_line	/usr/local/nagios/libexec/set_to_stale
+	}
+
 define contactgroup {
 	contactgroup_name	causetestfailure
 	alias	This causes a test failure by having a comma separated list before the empty contactgroup
@@ -120,6 +125,40 @@ define service {
 	notification_options	u,w,c,r,f,s
 	notifications_enabled	1
 	notification_interval	60.000000
+	first_notification_delay	0.000000
+	stalking_options	n
+	process_perf_data	1
+	failure_prediction_enabled	1
+	retain_status_information	1
+	retain_nonstatus_information	1
+	}
+
+define service {
+	host_name	host1
+	service_description	Uses important check command
+	check_period	none
+	check_command	set_to_stale
+	contacts	nagiosadmin
+	notification_period	none
+	initial_state	o
+	check_interval	15.000000
+	retry_interval	1.000000
+	max_check_attempts	5
+	is_volatile	0
+	parallelize_check	1
+	active_checks_enabled	1
+	passive_checks_enabled	1
+	obsess_over_service	1
+	event_handler_enabled	1
+	low_flap_threshold	0.000000
+	high_flap_threshold	0.000000
+	flap_detection_enabled	1
+	flap_detection_options	o,w,u,c
+	freshness_threshold	0
+	check_freshness	0
+	notification_options	u,w,c,r,f,s
+	notifications_enabled	1
+	notification_interval	65.000000
 	first_notification_delay	0.000000
 	stalking_options	n
 	process_perf_data	1
